# blitzy-chess

./: .gitignore  Makefile  README.md  executive-summary.html
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/chess_ai/: __init__.py  app.py  config.py
backend/chess_ai/api/: __init__.py  game_ws.py  health.py  multiplayer_ws.py
backend/chess_ai/engine/: __init__.py  book.py  endgame.py  evaluator.py  move_order.py  search.py  tables.py
backend/chess_ai/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
backend/chess_ai/observability/dashboards/: chess_ai_dashboard.json
backend/chess_ai/rooms/: __init__.py  manager.py  protocol.py
backend/chess_ai/self_play/: __init__.py  annotator.py  runner.py
backend/scripts/: download_book.py  download_syzygy.py
backend/tests/: conftest.py  test_book.py  test_endgame.py  test_evaluator.py  test_game_ws.py  test_move_order.py  test_multiplayer_ws.py  test_protocol.py  test_rooms.py  test_search.py  test_self_play.py
blitzy-deck/references/: blitzy-reveal-theme.css
blitzy/documentation/: Agent Action Plan.md  Project Guide.md
docs/: decision-log.md  onboarding.md  traceability-matrix.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CapturedPieces.tsx  GameBoard.tsx  GameOverOverlay.tsx  ModeSelect.tsx  MoveHistory.tsx  OnlineLobby.tsx  PromotionDialog.tsx  SelfPlayView.tsx  SidePanel.tsx
frontend/src/hooks/: useGameState.ts  useGameWebSocket.ts  useMultiplayerWebSocket.ts
frontend/src/styles/: index.css
frontend/src/tests/: App.test.tsx  GameBoard.test.tsx  MoveHistory.test.tsx  SelfPlayView.test.tsx  SidePanel.test.tsx  setup.ts  useGameState.test.ts  useGameWebSocket.test.ts  useMultiplayerWebSocket.test.ts
frontend/src/types/: index.ts
